# openpilot-nnlc-tools

./: README.md  build_and_push.sh  pyproject.toml
docker/: docker-compose.yml
nnlc_tools/: extract_lateral_data.py
output/2026-06-29_15-07-19/train/training_results/lateral_data_pruned/: lateral_data_pruned.bson  lateral_data_pruned.json  lateral_data_pruned_log.txt
