[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnlc-tools"
version = "0.1.0"
description = "NNLC (Neural Network Lateral Control) training tools for openpilot"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
    "tqdm>=4.65",
    "zstandard>=0.21",
    "paramiko>=3.0",
    "pycapnp>=2.0",
    "scipy>=1.10",
]

[project.urls]
Repository = "https://github.com/amzoo/openpilot-nnlc-tools"

[project.scripts]
nnlc-sync = "nnlc_tools.sync_rlogs:main"
nnlc-extract = "nnlc_tools.extract_lateral_data:main"
nnlc-score = "nnlc_tools.score_routes:main"
nnlc-visualize = "nnlc_tools.visualize_coverage:main"
nnlc-validate = "nnlc_tools.visualize_model:main"
nnlc-prune-routes = "nnlc_tools.prune_routes:main"
nnlc-interventions = "nnlc_tools.analyze_interventions:main"
nnlc-sc-visualize = "nnlc_tools.steering_classifier.visualize:main"

[project.optional-dependencies]
dev = ["pytest"]
train = ["scikit-learn>=1.3"]

[tool.setuptools.packages.find]
include = ["nnlc_tools*"]

[tool.setuptools.package-data]
"nnlc_tools" = ["cereal/*.capnp", "cereal/include/*.capnp"]

[tool.pytest.ini_options]
markers = ["slow: marks tests slow (deselect with '-m \"not slow\"')"]
